exports[`prefer-lowercase-title > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 1`] = `

Options:
- ignore:
    - 'describe'

Code:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(11): import * as nodeTest from 'node:test';\nnodeTest.test(\"Foo\", () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(11): import * as nodeTest from 'node:test';\nnodeTest.test(\"Foo\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("Foo", () => {});
    |               ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\" as string, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo" as string, () => {});

`;

exports[`prefer-lowercase-title > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\" as string, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo" as string, () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo" as string, () => {});

`;

exports[`prefer-lowercase-title > invalid(2): import {test, it, describe, suite, before} from 'node:test';\nit(\"Should work\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it("Should work", () => {});

`;

exports[`prefer-lowercase-title > invalid(2): import {test, it, describe, suite, before} from 'node:test';\nit(\"Should work\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | it("Should work", () => {});
    |    ^^^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it("should work", () => {});

`;

exports[`prefer-lowercase-title > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe("Foo", () => {});
    |          ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(4): import {test, it, describe, suite, before} from 'node:test';\nsuite(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(4): import {test, it, describe, suite, before} from 'node:test';\nsuite(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | suite("Foo", () => {});
    |       ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ndescribe.only(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.only("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ndescribe.only(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe.only("Foo", () => {});
    |               ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.only("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\`Foo \${x}\`, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(\`Foo \${x}\`, () => {});

`;

exports[`prefer-lowercase-title > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\`Foo \${x}\`, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test(\`Foo \${x}\`, () => {});
    |      ^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(\`foo \${x}\`, () => {});

`;

exports[`prefer-lowercase-title > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", {skip: true}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", {skip: true}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", {skip: true}, () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Éfoo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Éfoo", () => {});

`;

exports[`prefer-lowercase-title > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Éfoo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Éfoo", () => {});
    |      ^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("éfoo", () => {});

`;

exports[`prefer-lowercase-title > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Delete user\", () => {}); 1`] = `

Options:
- allowedPrefixes:
    - 'GET'

Code:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Delete user", () => {});

`;

exports[`prefer-lowercase-title > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Delete user\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Delete user", () => {});
    |      ^^^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("delete user", () => {});

`;
